--- a/404.html
+++ b/404.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - 页面未找到</title>
+    <title>404 - Page Not Found</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            font-family: 'Segoe UI', Arial, sans-serif;
+            background-color: #f8f9fa;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -17,30 +17,46 @@
         .container {
             text-align: center;
             background-color: white;
-            padding: 2rem;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            padding: 3rem;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+            max-width: 500px;
+            width: 90%;
         }
         h1 {
-            color: #333;
+            color: #2d3436;
+            font-size: 3rem;
+            margin: 0 0 1rem 0;
         }
         p {
-            color: #666;
+            color: #636e72;
+            font-size: 1.1rem;
+            line-height: 1.6;
+            margin: 1rem 0;
         }
         a {
-            color: #007bff;
+            color: #0984e3;
             text-decoration: none;
+            font-weight: 500;
+            transition: color 0.3s ease;
         }
         a:hover {
-            text-decoration: underline;
+            color: #0061a8;
+            text-decoration: none;
+        }
+        .error-code {
+            font-size: 1.2rem;
+            color: #b2bec3;
+            margin-bottom: 1rem;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>404 - 页面未找到</h1>
-        <p>抱歉，您请求的页面不存在。</p>
-        <p>请检查URL是否正确，或者返回<a href="/">首页</a>。</p>
+        <h1>Oops!</h1>
+        <div class="error-code">404</div>
+        <p>The page you're looking for seems to have gone on an adventure.</p>
+        <p>You can return to the <a href="/">homepage</a> or try searching for what you need.</p>
     </div>
 </body>
 </html>
