--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -32,7 +32,7 @@
     <link rel="canonical" href="https://quinfall.com/terms-of-service">
     <meta name="yandex-verification" content="d40cadd59e30ff97" />
     <!-- Styles -->
-    <link rel="stylesheet" href="static/base.css?v=0.5">
+    <link rel="stylesheet" href="static/base.css?v=0.1.1">
     
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-NJYFN6CYK8"></script>
@@ -112,30 +112,31 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <img src="static/logo.png" alt="The Quinfall Logo">
+                    <img src="static/logo.png" alt="Dune: Awakening Logo">
                 </div>
+                <button class="mobile-menu-btn">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
                 <ul>
                     <li><a href="/">Home</a></li>
-                    <li><a href="/character">Character</a></li>
-                    <li><a href="/monsters">Monsters</a></li>
                     <li><a href="/news">News</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle">Guides</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/guides/weapons">Weapons</a></li>
-                            <li><a href="/guides/world">World Map</a></li>
-                            <li><a href="/guides/gold-coins">Gold Coins</a></li>
-                            <li><a href="/guides/video-guides">Video Guides</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="/download" class="download-btn">Download</a></li>
+                    <li><a href="/media">Media</a></li>
+                    <li><a href="/character">Character</a></li>
+                    <li><a href="/product">Product</a></li>
                 </ul>
-                <div class="mobile-menu">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
             </nav>
+        </div>
+        <div class="mobile-menu">
+            <button class="close-menu">&times;</button>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/news">News</a></li>
+                <li><a href="/media">Media</a></li>
+                <li><a href="/character">Character</a></li>
+                <li><a href="/product">Product</a></li>
+            </ul>
         </div>
     </header>
 
@@ -234,50 +235,36 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="static/logo.png" alt="The Quinfall Logo">
-                    <div class="social-links">
-                        <a href="https://discord.gg/thequinfall" target="_blank" aria-label="Discord">
-                            <svg viewBox="0 0 24 24"><path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515a.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0a12.64 12.64 0 0 0-.617-1.25a.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057a19.9 19.9 0 0 0 5.993 3.03a.078.078 0 0 0 .084-.028a14.09 14.09 0 0 0 1.226-1.994a.076.076 0 0 0-.041-.106a13.107 13.107 0 0 1-1.872-.892a.077.077 0 0 1-.008-.128a10.2 10.2 0 0 0 .372-.292a.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127a12.299 12.299 0 0 1-1.873.892a.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028a19.839 19.839 0 0 0 6.002-3.03a.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03z"/></svg>
-                        </a>
-                    </div>
+                    <img src="static/logo.png" alt="Dune: Awakening Logo">
                 </div>
                 <div class="footer-links">
-                    <div class="footer-column">
-                        <h3>Game</h3>
-                        <ul>
-                            <li><a href="/">Home</a></li>
-                            <li><a href="/character">Character</a></li>
-                            <li><a href="/monsters">Monsters</a></li>
-                            <li><a href="/news">News</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-column">
-                        <h3>Guides</h3>
-                        <ul>
-                            <li><a href="/guides/weapons">Weapons</a></li>
-                            <li><a href="/guides/world">World Map</a></li>
-                            <li><a href="/guides/gold-coins">Gold Coins</a></li>
-                            <li><a href="/guides/video-guides">Video Guides</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-column">
-                        <h3>Community</h3>
-                        <ul>
-                            <li><a href="/download">Download</a></li>
-                            <li><a href="https://discord.gg/thequinfall" target="_blank">Discord</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-column">
-                        <h3>Legal</h3>
-                        <ul>
-                            <li><a href="/privacy-policy">Privacy Policy</a></li>
-                            <li><a href="/terms-of-service">Terms of Service</a></li>
-                        </ul>
-                    </div>
+                    <h3>Navigation</h3>
+                    <ul>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/news">News</a></li>
+                        <li><a href="/media">Media</a></li>
+                        <li><a href="/character">Character</a></li>
+                        <li><a href="/product">Product</a></li>
+                    </ul>
+                </div>
+                <div class="footer-links">
+                    <h3>Community</h3>
+                    <ul>
+                        <li><a href="https://discord.gg/duneawakening" target="_blank">Discord</a></li>
+                        <li><a href="https://twitter.com/duneawakening" target="_blank">Twitter</a></li>
+                        <li><a href="https://www.youtube.com/duneawakening" target="_blank">YouTube</a></li>
+                    </ul>
+                </div>
+                <div class="footer-links">
+                    <h3>Legal</h3>
+                    <ul>
+                        <li><a href="/privacy-policy">Privacy Policy</a></li>
+                        <li><a href="/terms-of-service">Terms of Service</a></li>
+                    </ul>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>© 2025 The Quinfall. All rights reserved.</p>
+                <p>© 2025 Dune: Awakening. All rights reserved.</p>
             </div>
         </div>
     </footer>
