--- a/news.html
+++ b/news.html
@@ -462,7 +462,7 @@
             <div class="container">
                 <div class="footer-content">
                     <div class="footer-logo">
-                        <img src="./static/images/logo.png" alt="Dune: Awakening Logo">
+                        <img src="static/logo.png" alt="Dune: Awakening Logo">
                     </div>
                     <div class="footer-links">
                         <h3>Navigation</h3>
