--- a/character.html
+++ b/character.html
@@ -23,6 +23,11 @@
         <!-- Favicon -->
         <link rel="icon" type="image/x-icon" href="static/favicon.ico">
         <link rel="apple-touch-icon" href="static/logo.png">
+        <meta name="msvalidate.01" content="B362957FC36C5EDDD6079B6D78330424">
+        
+        <!-- IndexNow -->
+        <meta name="IndexNow-Key" content="B362957FC36C5EDDD6079B6D78330424">
+        <meta name="IndexNow-Url" content="https://dune-awakening.com/">
         
         <!-- Styles -->
         <link rel="stylesheet" href="static/base.css?v=0.1.1">
