--- a/news.html
+++ b/news.html
@@ -26,6 +26,11 @@
         
         <!-- Styles -->
         <link rel="stylesheet" href="static/base.css">
+        <meta name="msvalidate.01" content="B362957FC36C5EDDD6079B6D78330424">
+        
+        <!-- IndexNow -->
+        <meta name="IndexNow-Key" content="B362957FC36C5EDDD6079B6D78330424">
+        <meta name="IndexNow-Url" content="https://dune-awakening.com/">
         <style>
             main {
                 margin-top: 80px;
