--- a/character.html
+++ b/character.html
@@ -31,6 +31,14 @@
         
         <!-- Styles -->
         <link rel="stylesheet" href="static/base.css?v=0.1.1">
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-ET0ZKVLZYL"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-ET0ZKVLZYL');
+        </script>
         <style>
             .character-header {
                 background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url('static/character-bg.jpg');
@@ -412,6 +420,16 @@
                 </ul>
             </div>
         </header>
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '6c78042cc4e30c8ff128fa21be82d4ff',
+                'format' : 'iframe',
+                'height' : 60,
+                'width' : 468,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/6c78042cc4e30c8ff128fa21be82d4ff/invoke.js"></script>
         <main>
             <section class="character-header">
                 <div class="container">
