--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -37,13 +37,13 @@
     <meta name="IndexNow-Key" content="B362957FC36C5EDDD6079B6D78330424">
     <meta name="IndexNow-Url" content="https://dune-awakening.com/">
     
-    <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NJYFN6CYK8"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ET0ZKVLZYL"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-NJYFN6CYK8');
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ET0ZKVLZYL');
     </script>
     <style>
         .section-container {
