--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -38,12 +38,13 @@
     <meta name="msvalidate.01" content="B362957FC36C5EDDD6079B6D78330424">
     
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NJYFN6CYK8"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ET0ZKVLZYL"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-NJYFN6CYK8');
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ET0ZKVLZYL');
     </script>
     <style>
         .section-container {
