--- a/product.html
+++ b/product.html
@@ -31,10 +31,17 @@
         <!-- IndexNow -->
         <meta name="IndexNow-Key" content="B362957FC36C5EDDD6079B6D78330424">
         <meta name="IndexNow-Url" content="https://dune-awakening.com/">
-        
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-ET0ZKVLZYL"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-ET0ZKVLZYL');
+        </script>
         <style>
             .product-header {
-                background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url('static/product-bg.jpg');
+                background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7));
                 background-size: cover;
                 background-position: center;
                 color: white;
@@ -235,7 +242,16 @@
                 </ul>
             </div>
         </header>
-
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '6c78042cc4e30c8ff128fa21be82d4ff',
+                'format' : 'iframe',
+                'height' : 60,
+                'width' : 468,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/6c78042cc4e30c8ff128fa21be82d4ff/invoke.js"></script>
         <main>
             <section class="product-header">
                 <div class="container">
