--- a/character.html
+++ b/character.html
@@ -26,7 +26,7 @@
         <meta name="msvalidate.01" content="B362957FC36C5EDDD6079B6D78330424">
         
         <!-- IndexNow -->
-        <meta name="IndexNow-Key" content="B362957FC36C5EDDD6079B6D78330424">
+        <meta name="yandex-verification" content="c0ded2a1a0de0c5f" />
         <meta name="IndexNow-Url" content="https://dune-awakening.com/">
         
         <!-- Styles -->
