--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -33,7 +33,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="static/base.css?v=0.1.1">
         <!-- IndexNow -->
-        <meta name="IndexNow-Key" content="B362957FC36C5EDDD6079B6D78330424">
+        <meta name="yandex-verification" content="c0ded2a1a0de0c5f" />
            <!-- Microsoft Validation -->
     <meta name="msvalidate.01" content="B362957FC36C5EDDD6079B6D78330424">
     
